--- a/tox.ini
+++ b/tox.ini
@@ -11,7 +11,6 @@ find_links =
 [testenv]
 deps =
     wheel
-    codecov
 
 basepython =
     py35: python3.5
@@ -21,10 +20,8 @@ basepython =
 passenv = *
 
 commands =
-  pip wheel --no-use-pep517 --progress-bar off -w {homedir}/.wheelhouse -f {homedir}/.wheelhouse -e .[dev]
-  pip install --no-use-pep517 --progress-bar off --find-links={homedir}/.wheelhouse --no-index -e .[dev]
+  pip install -e .[test]
   pytest -v .
-  codecov -e TOXENV
 
 [testenv:flake8]
 basepython = python3
@@ -32,4 +29,4 @@ basepython = python3
 deps =
     flake8>=3.6.0
 
-commands = flake8
+commands = flake8 --exclude=services ucloud --ignore=E501
