--- a/.travis.yml
+++ b/.travis.yml
@@ -12,16 +12,25 @@ install: pip install -U tox-travis
 # command to run tests, e.g. python setup.py test
 script: tox
 
-# deploy new versions to PyPI
+# deploy new versions to PyPI / GithubIO
 deploy:
-  provider: pypi
-  distributions: sdist bdist_wheel
-  skip_existing: true
-  user: ucloud
-  password:
-    secure: PLEASE_REPLACE_ME
-  on:
-    tags: true
-    repo: ucloud/ucloud-sdk-python3
-    python: 3.7
-
+  - provider: pypi
+    distributions: sdist bdist_wheel
+    skip_existing: true
+    user: ucloud
+    password:
+      secure: $PYPI_PASSWORD
+    on:
+      branch: master
+#      tags: true
+#      repo: ucloud/ucloud-sdk-python3
+      python: 3.7
+  - provider: pages
+    skip_cleanup: true
+    github_token: $GITHUB_TOKEN
+    keep_history: true
+    on:
+      branch: master
+#      tags: true
+#      repo: ucloud/ucloud-sdk-python3
+      python: 3.7
