--- a/tox.ini
+++ b/tox.ini
@@ -21,8 +21,7 @@ basepython =
 passenv = *
 
 commands =
-  pip wheel --no-use-pep517 --progress-bar off -w {homedir}/.wheelhouse -f {homedir}/.wheelhouse -e .[dev]
-  pip install --no-use-pep517 --progress-bar off --find-links={homedir}/.wheelhouse --no-index -e .[dev]
+  pip install -e .[dev]
   pytest -v .
   codecov -e TOXENV
 
