--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,8 @@ install: pip install -U tox-travis
 # command to run tests, e.g. python setup.py test
 script: tox
 
+before_deploy: pip install -e .[dev]
+
 # deploy new versions to PyPI / GithubIO
 deploy:
   - provider: pypi
