--- a/.travis.yml
+++ b/.travis.yml
@@ -14,25 +14,28 @@ install: pip install -U tox-travis
 # command to run tests, e.g. python setup.py test
 script: tox
 
-before_deploy: pip install -e .[dev]
+before_deploy:
+    - pip install sphinx
+    - make docs
 
 # deploy new versions to PyPI / GithubIO
 deploy:
+  - provider: pages
+    skip_cleanup: true
+    github_token: $GITHUB_TOKEN
+    keep_history: true
+    local_dir: docs/build/html
+    on:
+      branch: master
+#      tags: true
+#      repo: ucloud/ucloud-sdk-python3
+      python: 3.7
   - provider: pypi
     distributions: sdist bdist_wheel
     skip_existing: true
     user: ucloud
     password:
       secure: $PYPI_PASSWORD
-    on:
-      branch: master
-#      tags: true
-#      repo: ucloud/ucloud-sdk-python3
-      python: 3.7
-  - provider: pages
-    skip_cleanup: true
-    github_token: $GITHUB_TOKEN
-    keep_history: true
     on:
       branch: master
 #      tags: true
