--- a/tox.ini
+++ b/tox.ini
@@ -11,7 +11,6 @@ find_links =
 [testenv]
 deps =
     wheel
-    codecov
 
 basepython =
     py35: python3.5
@@ -21,9 +20,8 @@ basepython =
 passenv = *
 
 commands =
-  pip install -e .[dev]
+  pip install -e .[test]
   pytest -v .
-  codecov -e TOXENV
 
 [testenv:flake8]
 basepython = python3
