--- a/.travis.yml
+++ b/.travis.yml
@@ -17,13 +17,13 @@ script: tox
 before_deploy:
     - pip install sphinx
     - make docs
+    - ls docs/build/html
 
 # deploy new versions to PyPI / GithubIO
 deploy:
   - provider: pages
     skip_cleanup: true
     github_token: $GITHUB_TOKEN
-    keep_history: true
     local_dir: docs/build/html
     on:
       branch: master
