--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,8 @@ before_deploy:
 deploy:
   - provider: pages
     skip_cleanup: true
-    github_token: $GITHUB_TOKEN
+    github_token:
+      secure: $GITHUB_TOKEN
     local_dir: docs/build/html
     on:
       branch: master
