--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ install: pip install -U tox-travis
 script: tox
 
 before_deploy:
-    - pip install sphinx
+    - pip install -e .[doc]
     - make docs
     - ls docs/build/html
     - echo ${GITHUB_TOKEN:0:5}
