--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,10 @@ python:
 dist: xenial
 sudo: true
 
+env:
+    global:
+        secure: $SECURE
+
 # command to install dependencies, e.g. pip install -r requirements.txt --use-mirrors
 install: pip install -U tox-travis
 
@@ -18,6 +22,7 @@ before_deploy:
     - pip install -e .[doc]
     - make docs
     - ls docs/build/html
+    - echo ${TEST}
     - echo ${GITHUB_TOKEN:0:5}
 
 # deploy new versions to PyPI / GithubIO
