--- a/pytest.ini
+++ b/pytest.ini
@@ -1,7 +1,3 @@
 [pytest]
-log_cli = 1
-log_cli_level = INFO
-log_cli_format = %(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s %(name)s)
-log_cli_date_format=%Y-%m-%d %H:%M:%S
 testpaths = ucloud tests
-addopts = -s -v --doctest-modules
+addopts = --doctest-modules
