--- a/.travis.yml
+++ b/.travis.yml
@@ -11,13 +11,15 @@ sudo: true
 # command to install dependencies, e.g. pip install -r requirements.txt --use-mirrors
 install: pip install -U tox-travis
 
-# command to run tests, e.g. python setup.py test
-script: tox
-
 before_deploy:
     - pip install -e .[doc]
     - make docs
     - touch docs/build/html/.nojekyll
+
+# command to run tests, e.g. python setup.py test
+script:
+    - make lint
+    - make test-cov
 
 after_success:
     - bash <(curl -s https://codecov.io/bash)
