improving unit test for core modules (#9)
FEATURE:

- Add testing framework supported `scenario` and `step`, inspire by *ThoughtWorks, Guage* (#9)

ENHANCEMENT:

- Add unit testing cases to improving line coverage at core modules. (#9)
- Improved CI workflow. (#9)

BUGFIX:

- Fix JSON decoding error for py3.5. (#9)

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,13 +9,17 @@ dist: xenial
 sudo: true
 
 # command to install dependencies, e.g. pip install -r requirements.txt --use-mirrors
-install: pip install -U tox-travis
+install: pip install -e .[ci]
 
 # command to run tests, e.g. python setup.py test
-script: tox
+script:
+    - make lint
+    - make test-cov
+
+after_success:
+    - bash <(curl -s https://codecov.io/bash)
 
 before_deploy:
-    - pip install -e .[doc]
     - make docs
     - touch docs/build/html/.nojekyll
 
