--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ install: pip install -e .[ci]
 script:
     - make lint
     - make test-cov
-    - make release-check
+#    - make release-check
 
 after_success:
     - bash <(curl -s https://codecov.io/bash)
